--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,9 +21,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mongoose": "^8.16.0",
-    "nodemon": "^3.1.10",
     "jsonwebtoken": "^9.0.0",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^8.16.0",
+    "multer": "^2.0.1",
+    "nodemon": "^3.1.10"
   }
 }
